# mastodon-ios

./: .bazelrc  .gitignore  AppVersion.xcconfig  BUILD  MODULE.bazel  Package.resolved  Package.swift  swift_deps_index.json
Documentation/: Setup.md
Mastodon/: BUILD.bazel  BodegaPersistence.swift
Mastodon/Activity/: BUILD.bazel
Mastodon/Coordinator/: BUILD.bazel  SceneCoordinator.swift
Mastodon/Diffable/Onboarding/: BUILD.bazel
Mastodon/Diffable/Profile/: BUILD.bazel
Mastodon/Diffable/Report/: BUILD.bazel
Mastodon/Diffable/Search/: BUILD.bazel
Mastodon/Diffable/Status/: BUILD.bazel
Mastodon/Diffable/User/: BUILD.bazel
Mastodon/Extension/: BUILD.bazel
Mastodon/Helper/: BUILD.bazel
Mastodon/In Progress New Layout and Datamodel/: BoutiqueStores.swift  GenericMastodonPost+Subclasses.swift  GenericMastodonPost.swift  GroupedNotificationFeedLoader.swift  HomeTimelineListViewController.swift  InlinePostPreview.swift  LastReadMarkers.swift  MastodonAccount.swift  MastodonFeedLoader.swift  MastodonPost.swift  NotificationInfo.swift  NotificationListViewController.swift  NotificationRowView.swift  NotificationRowViewModel.swift  NotificationsCacheManager.swift  TimelineFeedLoader.swift
Mastodon/In Progress New Layout and Datamodel/Common Components/: AlignmentGuides.swift  AuthorHeaderView.swift  AvatarView.swift  BUILD.bazel  GeometryHelpers.swift  HtmlContentView.swift  HtmlHelpers.swift  MastodonPostMenuAction.swift  ProportionalImageGridLayout.swift  SocialContextHeader.swift  StatefulActionButton.swift  TextViewWithCustomEmoji.swift
Mastodon/In Progress New Layout and Datamodel/Common Components/Common Actions on Statuses and Accounts/: BUILD.bazel  ContentConcealViewModel.swift  MastodonPostMenuAction.swift
Mastodon/In Progress New Layout and Datamodel/Common Components/Views/: AuthorHeaderView.swift  AvatarView.swift  BUILD.bazel  LinkPreviewCard.swift  MediaAttachmentView.swift  PollView.swift  ShowMoreLozenge.swift  SocialContextHeader.swift  StatefulActionButton.swift  TextViewWithCustomEmoji.swift  WebContentView.swift
Mastodon/In Progress New Layout and Datamodel/FeedLoader/: BUILD.bazel  MastodonFeedLoader.swift
Mastodon/In Progress New Layout and Datamodel/GenericMastodonPost and Subclasses/: BUILD.bazel  GenericMastodonPost+Subclasses.swift  GenericMastodonPost.swift
Mastodon/In Progress New Layout and Datamodel/Notifications/: BUILD.bazel  GroupedNotificationFeedLoader.swift  InlinePostPreview.swift  NotificationListViewController.swift  NotificationRowView.swift  NotificationRowViewModel.swift  NotificationsCacheManager.swift
Mastodon/In Progress New Layout and Datamodel/Timeline/: BUILD.bazel  HomeTimelineListViewController.swift  TimelineFeedLoader.swift
Mastodon/In Progress New Layout and Datamodel/TimelinePostCell/: ActionButtons.swift
Mastodon/Preference/: BUILD.bazel
Mastodon/Protocol/: BUILD.bazel
Mastodon/Protocol/Provider/: BUILD.bazel  DataSourceFacade+Follow.swift  DataSourceFacade+Media.swift  DataSourceFacade+Status.swift  DataSourceProvider+NotificationTableViewCellDelegate.swift  DataSourceProvider+StatusTableViewCellDelegate.swift  DataSourceProvider+StatusTableViewControllerNavigateable.swift
Mastodon/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
Mastodon/Scene/Account/: AccountViewController.swift  BUILD.bazel
Mastodon/Scene/Account/Cell/: BUILD.bazel
Mastodon/Scene/Account/View/: BUILD.bazel
Mastodon/Scene/Compose/: BUILD.bazel  ComposeViewController.swift  ComposeViewModel.swift
Mastodon/Scene/Compose/CollectionViewCell/: BUILD.bazel
Mastodon/Scene/Compose/View/: BUILD.bazel
Mastodon/Scene/Discovery/: BUILD.bazel
Mastodon/Scene/Discovery/Community/: BUILD.bazel
Mastodon/Scene/Discovery/ForYou/: BUILD.bazel
Mastodon/Scene/Discovery/Hashtags/: BUILD.bazel
Mastodon/Scene/Discovery/News/: BUILD.bazel
Mastodon/Scene/Discovery/Posts/: BUILD.bazel
Mastodon/Scene/Discovery/View/: BUILD.bazel
Mastodon/Scene/Donation/: BUILD.bazel
Mastodon/Scene/HashtagTimeline/: BUILD.bazel
Mastodon/Scene/HomeTimeline/: BUILD.bazel  HomeTimelineViewController.swift  HomeTimelineViewModel.swift
Mastodon/Scene/MediaPreview/: BUILD.bazel  MediaPreviewViewController.swift  MediaPreviewViewModel.swift
Mastodon/Scene/MediaPreview/Image/: BUILD.bazel
Mastodon/Scene/MediaPreview/Paging/: BUILD.bazel
Mastodon/Scene/MediaPreview/Video/: BUILD.bazel
Mastodon/Scene/Notification/: BUILD.bazel  NotificationListItem.swift  NotificationViewController.swift
Mastodon/Scene/Notification/Cell/: BUILD.bazel
Mastodon/Scene/Notification/Notification Filtering/: BUILD.bazel  NotificationPolicyHostingViewController.swift
Mastodon/Scene/Notification/NotificationTimeline/: BUILD.bazel  NotificationTimelineViewController+DataSourceProvider.swift  NotificationTimelineViewModel+Diffable.swift  NotificationTimelineViewModel+LoadOldestState.swift  NotificationTimelineViewModel.swift
Mastodon/Scene/Notification/NotificationView/: BUILD.bazel  NotificationView+Configuration.swift
Mastodon/Scene/Onboarding/ConfirmEmail/: BUILD.bazel
Mastodon/Scene/Profile/: BUILD.bazel  ProfileViewController.swift
Mastodon/Scene/Root/: BUILD.bazel  ContentSplitViewController.swift
Mastodon/Scene/Settings/: BUILD.bazel  SettingsCoordinator.swift
Mastodon/Scene/SuggestionAccount/: BUILD.bazel
Mastodon/Scene/Thread/: BUILD.bazel  ThreadViewController.swift
Mastodon/Scene/Transition/: BUILD.bazel
Mastodon/Supporting Files/: AppDelegate.swift  BUILD.bazel
Mastodon/Template/: BUILD.bazel
Mastodon/Vender/: BUILD.bazel
MastodonIntent/Handler/: BUILD.bazel
MastodonIntent/Model/: BUILD.bazel
MastodonTests/: BUILD.bazel
MastodonUITests/: BUILD.bazel
NotificationService/: BUILD.bazel
ShareActionExtension/Scene/: BUILD.bazel  ShareViewController.swift
WidgetExtension/: BUILD.bazel
WidgetExtension/Variants/FollowersCount/: BUILD.bazel
WidgetExtension/Variants/Hashtag/: BUILD.bazel
WidgetExtension/Variants/LatestFollowers/: BUILD.bazel
WidgetExtension/Variants/MultiFollowersCount/: BUILD.bazel
(+276 files in other folders)
