load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Activity",
    srcs = [
        "SafariActivity.swift",
        "ShareActivityProvider.swift",
    ],
    module_name = "Activity",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonLocalization",
    ],
)
