load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Coordinator",
    srcs = [
        "Coordinator.swift",
        "SceneCoordinator.swift",
    ],
    module_name = "Coordinator",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/CoreDataStack",
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
    ],
)
