load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Extension",
    srcs = [
        "AVPlayer.swift",
        "Collection+IsNotEmpty.swift",
        "Double.swift",
        "FLAnimatedImageView.swift",
        "NSKeyValueObservation.swift",
        "String.swift",
        "UIAlertController.swift",
        "UIApplication.swift",
        "UIBarButtonItem.swift",
        "UIControl.swift",
        "UIFont.swift",
        "UIImage+SFSymbols.swift",
        "UIInterfaceOrientationMask.swift",
        "UIInterpolatingMotionEffect.swift",
        "UIScrollView.swift",
        "UIScrollViewDelegate.swift",
        "UITabBarController.swift",
        "UITableView.swift",
        "UITableViewCell.swift",
        "UITapGestureRecognizer.swift",
        "UIView+Gesture.swift",
        "UIView+Remove.swift",
        "UIViewController.swift",
    ],
    module_name = "Extension",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
    ],
)
