load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Supporting Files",
    srcs = [
        "AppDelegate.swift",
        "SceneDelegate.swift",
    ],
    module_name = "Supporting Files",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/CoreDataStack",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonExtension",
        "//MastodonSDK/Sources/MastodonSDK",
        "//MastodonSDK/Sources/MastodonUI",
    ],
)
