load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Template",
    srcs = [
        "AutoGenerateProtocolDelegate.swift",
        "AutoGenerateProtocolRelayDelegate.swift",
        "AutoGenerateTableViewDelegate.swift",
    ],
    module_name = "Template",
    visibility = ["//visibility:public"],
)
