load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Vender",
    srcs = [
        "CustomScheduler.swift",
        "HandleTapAction.swift",
        "TransitioningMath.swift",
    ],
    module_name = "Vender",
    visibility = ["//visibility:public"],
)
