load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Handler",
    srcs = [
        "FollowersCountIntentHandler.swift",
        "HashtagIntentHandler.swift",
        "MultiFollowersCountIntentHandler.swift",
        "SendPostIntentHandler.swift",
    ],
    module_name = "Handler",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/CoreDataStack",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
    ],
)
