load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Search",
    srcs = [
        "SearchItem.swift",
        "SearchSection.swift",
    ],
    module_name = "Search",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
    ],
)
