load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Common Components",
    srcs = [
        "AlignmentGuides.swift",
        "GeometryHelpers.swift",
        "HtmlHelpers.swift",
        "ProportionalImageGridLayout.swift",
        "ZoomableScrollView.swift",
    ],
    module_name = "Common Components",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonSDK",
    ],
)
