load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "GenericMastodonPost and Subclasses",
    srcs = [
        "GenericMastodonPost.swift",
        "GenericMastodonPost+Subclasses.swift",
        "MastodonAccount.swift",
    ],
    module_name = "GenericMastodonPost and Subclasses",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonSDK",
    ],
)
