load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Notifications",
    srcs = [
        "GroupedNotificationFeedLoader.swift",
        "InlinePostPreview.swift",
        "NotificationInfo.swift",
        "NotificationListViewController.swift",
        "NotificationRowView.swift",
        "NotificationRowViewModel.swift",
        "NotificationsCacheManager.swift",
    ],
    module_name = "Notifications",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
    ],
)
