load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Provider",
    srcs = [
        "DataSourceFacade.swift",
        "DataSourceFacade+Block.swift",
        "DataSourceFacade+Bookmark.swift",
        "DataSourceFacade+Favorite.swift",
        "DataSourceFacade+Follow.swift",
        "DataSourceFacade+Hashtag.swift",
        "DataSourceFacade+Media.swift",
        "DataSourceFacade+Meta.swift",
        "DataSourceFacade+Model.swift",
        "DataSourceFacade+Mute.swift",
        "DataSourceFacade+Notifications.swift",
        "DataSourceFacade+Profile.swift",
        "DataSourceFacade+Reblog.swift",
        "DataSourceFacade+SearchHistory.swift",
        "DataSourceFacade+Status.swift",
        "DataSourceFacade+Status+History.swift",
        "DataSourceFacade+Thread.swift",
        "DataSourceFacade+Translate.swift",
        "DataSourceFacade+URL.swift",
        "DataSourceFacade+UserView.swift",
        "DataSourceProvider.swift",
        "DataSourceProvider+NotificationTableViewCellDelegate.swift",
        "DataSourceProvider+StatusTableViewCellDelegate.swift",
        "DataSourceProvider+StatusTableViewControllerNavigateable.swift",
        "DataSourceProvider+TableViewControllerNavigateable.swift",
        "DataSourceProvider+UITableViewDelegate.swift",
    ],
    module_name = "Provider",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/CoreDataStack",
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
        "//MastodonSDK/Sources/MastodonUI",
    ],
)
