load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Account",
    srcs = [
        "AccountListViewModel.swift",
        "AccountViewController.swift",
    ],
    module_name = "Account",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/CoreDataStack",
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
        "//MastodonSDK/Sources/MastodonUI",
    ],
)
