load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Compose",
    srcs = [
        "ComposeViewController.swift",
        "ComposeViewModel.swift",
    ],
    module_name = "Compose",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/CoreDataStack",
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
        "//MastodonSDK/Sources/MastodonUI",
    ],
)
