load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Discovery",
    srcs = [
        "DiscoveryItem.swift",
        "DiscoverySection.swift",
        "DiscoveryViewController.swift",
        "DiscoveryViewModel.swift",
    ],
    module_name = "Discovery",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
        "//MastodonSDK/Sources/MastodonUI",
    ],
)
