load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Donation",
    srcs = [
        "DonationBanner.swift",
        "DonationCampaignViewModel.swift",
        "DonationCompletionViewController.swift",
        "DonationViewController.swift",
        "NavigationFlow.swift",
        "NewDonationNavigationFlow.swift",
    ],
    module_name = "Donation",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
    ],
)
