load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "HashtagTimeline",
    srcs = [
        "HashtagTimelineHeaderView.swift",
        "HashtagTimelineViewController.swift",
        "HashtagTimelineViewController+DataSourceProvider.swift",
        "HashtagTimelineViewModel.swift",
        "HashtagTimelineViewModel+Diffable.swift",
        "HashtagTimelineViewModel+State.swift",
    ],
    module_name = "HashtagTimeline",
    visibility = ["//visibility:public"],
    deps = [
        "//MastodonSDK/Sources/CoreDataStack",
        "//MastodonSDK/Sources/MastodonAsset",
        "//MastodonSDK/Sources/MastodonCore",
        "//MastodonSDK/Sources/MastodonLocalization",
        "//MastodonSDK/Sources/MastodonSDK",
        "//MastodonSDK/Sources/MastodonUI",
    ],
)
